Fixing the problems with the calculation.